@@ -1,3 +1,8 @@
+2015-04-03  Jan Hubicka  <hubicka@ucw.cz>
+
+	PR ipa/65076
+	* ipa-inline.c (edge_badness): Add combined size to the denominator.
+
 2015-04-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* omp-low.c (scan_omp_parallel, scan_omp_task, scan_omp_target): Set
